# KM_data_converter

./: README.md  README.zh-CN.md  mcap_to_rrd.py  package-lock.json  pyproject.toml  rrd_to_lerobot.py  split_video.py  urdf.py  video_to_rrd.py
.generated/: marvin_CCS_m6.urdf
km_data_converter/: ._test.py  __main__.py  pipeline.py  pyproject.toml  realsense.py  recompute_stats.py  rrd_to_lerobot.py  run_full_pipeline.py  split_video.py  test_video.py  test_videoStream.py  urdf.py  video_stream.py  video_to_rrd.py  video_to_rrd_touch.py
km_data_converter.egg-info/: SOURCES.txt  top_level.txt
km_data_converter/.generated/: marvin_CCS_m6.urdf  marvin_pro_mink_with_45gripper.urdf
km_data_converter/Marvin-description-ccs_new/: CMakeLists.txt  package.xml
km_data_converter/Marvin-description-ccs_new/urdf/: M6-S-L-CCS-696-V4.urdf.xacro  M6-S-R-CCS-696-V4.urdf.xacro  stand_v3.urf.xacro
km_data_converter/examples/python/rerun_export/rerun_export/lerobot/: converter.py  types.py  video_processing.py
km_data_converter/km_data_converter/: __init__.py  __main__.py  mcap_to_rrd.py  pipeline.py  rrd_to_lerobot.py  video_stream.py
km_data_converter/km_data_converter.egg-info/: PKG-INFO  entry_points.txt  requires.txt
km_data_converter/omnigripper_45.SLDASM_xacro/omnigripper.SLDASM/: omnigripper.SLDASM.urdf.xacro
km_data_converter_UI/: index.html  package-lock.json  package.json  tailwind.config.js
km_data_converter_UI/electron/: main.ts  preload.ts
km_data_converter_UI/scripts/: launch-electron.cjs
km_data_quality_check/: alignment_metrics.py  bag_inspector.py  cli.py  default_quality_rules.yaml  raw_checker.py  report_writer.py  rules.py  topic_metrics.py  video_inspector.py
(+11 files in other folders)
